Fixed setLocation not working with print preview window (stack overflowing)

Work on paging table vertically