@@ -5,11 +5,11 @@ DROPitTOme
 75,75,75,75,75
 false
 1
-3
+1
 ASCENDING
 654
 /Grades
-0
+1
 0
 409
 241
@@ -19,4 +19,4 @@ ASCENDING
 junit-4.11.jar
 hamcrest-core-1.3.jar
 /JUnitTests
-424
+860
