@@ -25,12 +25,12 @@ View deleted items (or maybe move things to a deleted folder then delete them af
 Add a weight % for each unit test (score wise)
 Warn if grade is larger than total points given to assignment
 Round decimals in grading
-Sort code by lines instead of length
 Properly validate if downloaded folder is the same as when it was extracted (hashing? checksums?)
 Upload changed files back to dropbox (or email to students)
 Remember previously used comments for this session.
 Store a list of (canned comments) which can simply be selected (or a shortcut can be assigned to them)
 Overlay Windows don't deallocate from memory
+Add tile mode to gradebook table print
 
 demo mode
     Log them into a test dropbox with some test code and files
