@@ -22,7 +22,6 @@
 <h3>Bugs</h3>
 <ul>
     <li>Multi-line method detection (simple unit tests)</li>
-    <li>Fix deleting lots of files not refreshing.</li>
     <li>Catch out of memory with massive files.</li>
     <li>If a zip is marked as invalid, it isn't stated to be invalid upon second session.</li>
     <li>Changing assignments in the queue throws exceptions and sometimes repaints wrong. (unconfirmed)</li>
@@ -31,10 +30,8 @@
 <h3>Visual</h3>
 <ul>
     <li>Show progress bar when populating filebrowser and downloading grades</li>
-    <li>Display lines somewhere</li>
     <li>Show progress deleting files when deleting files.</li>
     <li>Color gradient from red to green in filebrowser and gradebook browser based on grade/totalpoints</li>
-    <li>Improve first/last name searching for printing</li>
     <li>Class for JTextFields for doubles only (less duplicated code) (grade submit and edit)</li>
     <li>Snap names to left in gradebook</li>
     <li>Bulk file handling for gradebook</li>
@@ -57,7 +54,6 @@
     <li>display current fileQueue</li>
     <li>Switch grade spreadsheets</li>
     <li>Create spacer in gradebook</li>
-    <li>Add tile mode to gradebook table print</li>
 </ul>
 <h3>Required Additions</h3>
 <ul>
